; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_lapic.c_lapic_set_intr.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_lapic.c_lapic_set_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm = type { i32 }
%struct.vlapic = type { i32 }

@VM_MAXCPU = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lapic_set_intr(%struct.vm* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.vm*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.vlapic*, align 8
  store %struct.vm* %0, %struct.vm** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @VM_MAXCPU, align 4
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13, %4
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %5, align 4
  br label %41

19:                                               ; preds = %13
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 16
  br i1 %21, label %25, label %22

22:                                               ; preds = %19
  %23 = load i32, i32* %8, align 4
  %24 = icmp sgt i32 %23, 255
  br i1 %24, label %25, label %27

25:                                               ; preds = %22, %19
  %26 = load i32, i32* @EINVAL, align 4
  store i32 %26, i32* %5, align 4
  br label %41

27:                                               ; preds = %22
  %28 = load %struct.vm*, %struct.vm** %6, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call %struct.vlapic* @vm_lapic(%struct.vm* %28, i32 %29)
  store %struct.vlapic* %30, %struct.vlapic** %10, align 8
  %31 = load %struct.vlapic*, %struct.vlapic** %10, align 8
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i64 @vlapic_set_intr_ready(%struct.vlapic* %31, i32 %32, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %27
  %37 = load %struct.vm*, %struct.vm** %6, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @vcpu_notify_event(%struct.vm* %37, i32 %38, i32 1)
  br label %40

40:                                               ; preds = %36, %27
  store i32 0, i32* %5, align 4
  br label %41

41:                                               ; preds = %40, %25, %17
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local %struct.vlapic* @vm_lapic(%struct.vm*, i32) #1

declare dso_local i64 @vlapic_set_intr_ready(%struct.vlapic*, i32, i32) #1

declare dso_local i32 @vcpu_notify_event(%struct.vm*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
